crux-mir/test/symb_eval/overrides/bad_symb1.good
test bad_symb1/<DISAMB>::crux_test[0]: [Crux] Attempting to prove verification conditions.
FAILED

failures:

---- bad_symb1/<DISAMB>::crux_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/symbolic.rs:29:50: 29:61 !./libs/crucible/symbolic.rs:35:1: 42:2: error: in crucible/<DISAMB>::symbolic[0]::{impl#5}[0]::symbolic[0]
[Crux]   symbolic variable name must be a concrete string
[Crux]   Context:
[Crux]     internal: crucible/<DISAMB>::symbolic[0]::symbolic_u8[0]
[Crux]     ./libs/crucible/symbolic.rs:29:50: 29:61 !./libs/crucible/symbolic.rs:35:1: 42:2: crucible/<DISAMB>::symbolic[0]::{impl#5}[0]::symbolic[0]
[Crux]     test/symb_eval/overrides/bad_symb1.rs:7:13: 7:28: bad_symb1/<DISAMB>::crux_test[0]
[Crux]     internal: _start

[Crux-MIR] ---- FINAL RESULTS ----
[Crux] Goal status:
[Crux]   Total: 1
[Crux]   Proved: 0
[Crux]   Disproved: 1
[Crux]   Incomplete: 0
[Crux]   Unknown: 0
[Crux] Overall status: Invalid.
